# pico-u8g2-tinygl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  fb_to_img.py  requirements.txt
.github/workflows/: build.yml
scripts/: capture_framebuffer.py  make_video.sh
src/: main.c  rtt_comms.c  rtt_comms.h
